# baseballiq

./: .env.example  .gitignore  ARCHITECTURE.md  LINKEDIN_ARTICLE.md  Makefile  README.md  create_init_files.py  generate_demo_data.py  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
dashboard/: app.py
data/gold/: batter_game_summary.parquet  llm_insights.json  pitcher_game_summary.parquet  players.parquet
enrichment/: llm_enrichment.py
models/: predict.py  train.py
pipeline/: config.py  orchestrator.py
pipeline/gold/: aggregations.py
pipeline/ingestion/: statcast_ingestion.py
pipeline/silver/: cleaning.py  feature_engineering.py
reports/: scouting_report.py
tests/: test_pipeline.py
